apps/transmission/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/component
                      operator: In
                      values:
                        - media-server
                topologyKey: kubernetes.io/hostname
              weight: 100
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/component
                      operator: In
                      values:
                        - library-manager
                topologyKey: kubernetes.io/hostname
              weight: 50
      containers:
        - name: transmission
          image: transmission
          ports:
            - containerPort: 9091
              name: http
            - containerPort: 6881
              name: bittorrent
            - containerPort: 6881
              name: bittorrent-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads-data
              mountPath: /downloads/complete
              subPath: complete
            - name: downloads-data
              mountPath: /downloads/incomplete
              subPath: incomplete
            - name: scripts
              mountPath: /scripts
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: downloads-data
          persistentVolumeClaim:
            claimName: downloads-data
        - name: scripts
          configMap:
            name: transmission-scripts
