apps/transmission/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: shikanime
spec:
  ports:
    - name: http
      port: 9091
      targetPort: http
  selector:
    app.kubernetes.io/name: transmission
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-tracker
  namespace: shikanime
spec:
  loadBalancerClass: tailscale
  ports:
    - name: bittorrent
      port: 6881
      targetPort: bittorrent
    - name: bittorrent-udp
      protocol: UDP
      port: 6881
      targetPort: bittorrent-udp
  selector:
    app.kubernetes.io/name: transmission
  type: LoadBalancer
