apps/transmission/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: transmission
      port:
        name: http
  tls:
    - hosts:
        - transmission
